# Python-in-action

./: .gitignore
agent/a2a/a2a_simple/: .source  coding_agent.py  entry_agent.py  pyproject.toml  run_client.py  run_server.py
agent/adk/: .env.example  README.md
algorithm/: 733_dfs_recursive.py  733_dfs_recursive_2.py  directed_graph_strong_connectivity_adj_list.py  directed_graph_strong_connectivity_adj_matrix.py
algorithm/common/: test_entry.py
algorithm/graph/: build_reverse_graph_adj_list.py  build_reverse_graph_adj_matrix.py  undirected_graph_connectivity_adj_list.py  undirected_graph_connectivity_adj_matrix.py
algorithm/leetcode/: 26_removeDuplicates.py  26_removeDuplicates_two_pointer_for.py  26_removeDuplicates_two_pointer_while.py  27_removeElement.py  27_removeElement_two_pointer.py  88_merge.py
env_test/: test.py
extractor/: pyproject.toml
grammar/async/: async_for.py
grammar/common_functions/: dir.py  enumerate.py  zip.py
grammar/metaclass/: demo1.py
inbox/2024_quiz/: format-2.py  format.py
inbox/dify_dataset_crud/: dify_dataset_sdk.py  entry.py
inbox/langfuse/: dataset_config.json  langfuse_create_dataset.py  langfuse_run_dataset.py  langfuse_run_dataset_with_score.py  local.env
inbox/mem0/: mem0_hello_world.py
llm-api/: pyproject.toml
machine_learning/: missing_value_handle.py
machine_learning/deep_ml/: 1-1_matrix_dot_vector.py  1-2_transpose_matrix.py  1-4_scalar_multiply.py  1-6_calculate_matrix_mean.py
pythonCoreTechnologyAndPractice/07_condition_loop/: 0_index.py  1_comprehensions.py
tools/data_cleansing/: split.py  (+1 more)
(+300 files in other folders)
