[project]
name = "ppt_generate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.16",
    "langgraph>=0.5.1",
    "mcp[cli]>=1.10.1",
    "openai>=1.93.3",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "sympy>=1.14.0",
    "python-dotenv>=1.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
